2007-09-29  Brian Matherly <brian@gramps-project.org>
	* src/plugins/GVHourGlass.py: Added.
	* src/ReportBase/_GraphvizReportDialog: Added
	* src/ReportBase/_Constants.py: Add Graphviz type.
	* src/ReportBase/_ReportDialog.py: Add Graphviz type.
	* src/BaseDoc.py: Add GVDoc interface.

2007-09-29  Brian Matherly <brian@gramps-project.org>
	* src/gramps.py: Don't import gramps_main until logging is setup.

2007-09-29 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_ReadXML.py: remove bug: no more creation of objects if bookmark is found with
	handle that is not in database. This causes corruption of database!
	* src/GrampsDb/_GrampsDbBase.py: person bookmarks do not work after save. Correct. Issue #1260

2007-09-28 James G. Sack <jgsack@san.rr.com>
	* src/GrampsDb/_GrampsDbBase.py:
	0001187: Runaway Gramps XML file sizes

2007-09-28  Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/NarrativeWeb.py: 0001236: Narrative web report: If the event 
	has no date, there's no place (Issue #0001236)

2007-09-29  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_GrampsDbBase.py: documentation string error
	* src/Editors/_EditPerson.py: reload image if rectangle changes
	* src/glade/gramps.glade: rename in Media editor referencer,
	use region and corner as terms, add tooltip
	* src/Editors/_EditMediaRef.py: rename to upper/lower to corner1/2,
	provide upgrade path, default to (0,0,100,100) not (0,0,0,0)

2007-09-28  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/PdfDoc.py: Rewrite without gtk.PrintOperation dependency.

2007-09-28  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/CairoDoc.py:
	* src/docgen/GtkPrint.py:
	* src/docgen/PdfDoc.py:
	Cleanup.

2007-09-28 Tobias Gehrig <tobias@gehrignet.de>
	* src/DataViews/_PedigreeView.py: use subsection thumbnails
	* src/DataViews/_RelationView.py: use subsection thumbnails
	* src/Editors/_EditPerson.py: use subsection thumbnails