@@ -1,3 +1,6 @@
+2007-09-30  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
+	* src/docgen/GtkPrint.py (on_draw_page): Fix zooming problem in preview.
+
 2007-09-29  Brian Matherly <brian@gramps-project.org>
 	* src/plugins/GVHourGlass.py: Added.
 	* src/ReportBase/_GraphvizReportDialog: Added
